--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,6 @@
 [deps]
 Franklin = "713c75ef-9fc9-4b05-94a9-213340da978e"
+FranklinUtils = "dcd8a645-c81d-482f-af4b-568f72f3e16d"
 NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
+TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
